===================================
NEWS
===================================

0.7.1
-----

+ Added support to paste/copy text from/to Windows clipboard.
+ Added support to process Ctrl+C / Ctrl+V / Ctrl+P keys in all
  entry fields.
+ Fixed a bug where file names for new sprites are lower-case always
  (in Windows).

0.7
---

+ Added "Sprite Size" command (feature #2671468).
+ Added "Save Copy As" command (feature #2636076).
+ Copy & Paste use Windows clipboard (feature #2577954).
+ Added "Canvas Size" and "Rotate Canvas" commands.
+ Fixed compilation support for gcc 64 bits.
+ Fixed a bug with multiple editors and paste command.
+ Fixed a bug in the File Open dialog when user presses ENTER key
  with an empty file name.
+ Fixed critical bugs in rendering code.

0.6.1
-----

+ Added support to drag and drop files from Windows
  explorer (feature #2419098).
+ Fixed bug #2511762 (.PNG' extension unavailable in
  Open and Save As dialogs, thanks to Clayton Enga for
  the patch).

0.6
---

+ Added 'Curve' tool (bezier-spline).
+ Added support to drag and drop colors in color-bar (feature #2109224).
+ Added support to lock lines in special angles with the Shift key,
  useful to draw in isometric views (feature request #1961397).
+ Fixed bugs #1958760 and #1958932.
+ Fixed other serious bugs (Dead-pointers to palettes, Flatten
  Layers, File Selector, etc.).

0.6b2
-----

+ Added the `Background' layer.
+ Added support to load and save PNG files (through 'libpng').
+ Transparent cel handling for the end-user (you can move a cel and
  don't worry about its bounds).
+ Rewritten the "Color Bar" and "Color Selector" dialog.
+ Rewritten the "Animation Editor" (ex-Film Editor).
+ New tools: Eraser, Blur, Jumble.
+ Replaced the "List" menu with the tabs selector.
+ Rewritten the "File Selector":
  + Preview support.
  + Incremental search.
  + History of navigation (Back/Forward).
  + In Windows: you can visit Desktop, My Documents and My Computer
    locations.