@@ -5,7 +5,7 @@
 \palette ase.pcx
 \image ase.pcx
 
-Welcome to ASE 0.7
+Welcome to ASE 0.7.1
 
 READ THIS!
 
